# python-rag-demo

./: .gitignore  Home.py  README.md  pyproject.toml
data/fandom/: Agatha_All_Along.txt  Agatha_Harkness.txt  America_Chavez.txt  Asgard.txt  Avengers_Compound.txt  Avengers__Age_of_Ultron.txt  Avengers__Doomsday.txt  Avengers__Endgame.txt  Avengers__Infinity_War.txt  Battle_of_Earth.txt  Battle_of_New_York.txt  Ben_Grimm.txt  Black_Widow.txt  Bob_Reynolds.txt  Captain_America__Brave_New_World.txt  Captain_Marvel.txt  Cassandra_Nova.txt  Daredevil__Born_Again.txt  Deadpool___Wolverine.txt  Doctor_Strange.txt  Doctor_Strange_in_the_Multiverse_of_Madness.txt  Drax_the_Destroyer.txt  Echo.txt  Gamora.txt  Groot.txt  HYDRA.txt  Happy_Hogan.txt  Hawkeye.txt  Hulk.txt  Infinity_Gauntlet.txt  Infinity_Stones.txt  Infinity_War.txt  Iron_Man.txt  James_Rhodes.txt  Johnny_Storm.txt  Kate_Bishop.txt  Loki.txt  Mantis.txt  Matthew_Murdock.txt  Mind_Stone.txt  (+46 more)
data/wikipedia/: Agatha_All_Along.txt  Agatha_Harkness.txt  America_Chavez.txt  Ant-Man.txt  Ant-Man__film_.txt  Ant-Man_and_the_Wasp.txt  Ant-Man_and_the_Wasp__Quantumania.txt  Avengers__Age_of_Ultron.txt  Avengers__Doomsday.txt  Avengers__Endgame.txt  Avengers__Infinity_War.txt  Avengers__Marvel_Cinematic_Universe_.txt  Ben_Grimm.txt  Black_Panther.txt  Black_Panther__Wakanda_Forever.txt  Black_Panther__film_.txt  Black_Widow__film_.txt  Bob_Reynolds.txt  Captain_America.txt  Captain_Marvel.txt  (+81 more)
pages/: 1_💬_QA_Chat.py  2_🧠_Quiz_Mode.py  3_🦸_Character_Dive.py  4_📅_Timeline_Explorer.py  5_🔬_RAG_Insights.py
scripts/: ingest.py
(+12 files in other folders)
